2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 

	* layout.glade: Fix typo.

2008-01-11  Lluis Sanchez Gual <lluis@novell.com> 

	* DockFrame.cs: Actually remove the item in RemoveItem.

2008-01-10  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroupItem.cs, DockGroup.cs, DockItem.cs, DockFrame.cs: Load stored
	  item position, even if the item has not been added to the frame. In this
	  way it is possible to restore the position of items which are
	  dynamically added.

2008-01-08  Lluis Sanchez Gual <lluis@novell.com> 

	* DockBarItem.cs: Don't auto-hide the item while it has the focus.

2007-12-20  Lluis Sanchez Gual <lluis@novell.com> 

	* DockFrame.cs: Don't crash if trying to hide an item which is not yet
	  included in the layout.

2007-11-15  Aaron Bockover  <abockover@novell.com>

	* DockContainer.cs: Draw a border on the header, change the background 
	fill to active on hover; just some visual touch-up

2007-11-13  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroup.cs: Call SizeAllocate on all children even when children
	  position has not changed. Fixes some drawing issues.

2007-11-12  Lluis Sanchez Gual <lluis@novell.com> 

	* TabStrip.cs: Use Notebook as a base class. Fixes rendering issues in gtk
	  themes which check the type of the widget when drawing the tabs.

2007-11-11  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroupItem.cs, DockItem.cs: The VisibleChanged event is now fired by a
	  UpdateVisibleStatus method, which keeps track of old visibility status.
	* DockGroup.cs, DockFrame.cs: Implemented RemoveItem.
	* DockContainer.cs: Some dynamically added items may not be present in a
	  layout. Make sure they are explicitely hidden in this case.

2007-11-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix dist.

2007-11-10  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroupItem.cs: Don't allow docking on a hidden item.
	* DockGroup.cs: Update group visibility when removing the last tab of a