@@ -1,3 +1,7 @@
+2008-01-18  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* DockObject.cs: Use invariant locale to store doubles. Fixes bug #354567.
+
 2008-01-15  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* layout.glade: Fix typo.
